decafcomp/llvm/test/gcd2.llvm.bc.err
/usr/lib/llvm-8/bin/llvm-as: llvm/test/gcd2.llvm:35:7: error: value doesn't match function result type 'i1'
  ret i32 %a7
      ^
