decafcomp/llvm/test/gcd2.llvm
; ModuleID = 'GreatestCommonDivisor'
source_filename = "Test"

@a = internal global i32 10
@b = internal global i32 20

declare void @print_int(i32)

define i32 @main() {
entry:
  %z = alloca i32
  store i32 0, i32* %z
  %a = load i32, i32* @a
  %b = load i32, i32* @b
  %calltmp = call i32 @gcd(i32 %a, i32 %b)
  call void @print_int(i32 %calltmp)
  ret i32 0
}

define i1 @iszero(i32 %a, i32 %b) {
entry:
  %a1 = alloca i32
  store i32 %a, i32* %a1
  %b2 = alloca i32
  store i32 %b, i32* %b2
  br label %if

if:                                               ; preds = %entry
  %b3 = load i32, i32* %b2
  %tempEq = icmp eq i32 %b3, 0
  br i1 %tempEq, label %ifTrue, label %ifElse

ifTrue:                                           ; preds = %if
  %a7 = load i32, i32* %a1
  ret i32 %a7
  br label %ifEnd

ifElse:                                           ; preds = %if
  %b4 = load i32, i32* %b2
  %a5 = load i32, i32* %a1
  %b6 = load i32, i32* %b2
  %tempSRem = srem i32 %a5, %b6
  %calltmp = call i32 @gcd(i32 %b4, i32 %tempSRem)
  ret i32 %calltmp
  br label %ifEnd

ifEnd:                                            ; preds = %ifTrue, %ifElse
  ret i1 false
}

define i32 @gcd(i32 %a, i32 %b) {
entry:
  %a1 = alloca i32
  store i32 %a, i32* %a1
  %b2 = alloca i32
  store i32 %b, i32* %b2
  %a3 = load i32, i32* %a1
  %b4 = load i32, i32* %b2
  %calltmp = call i1 @iszero(i32 %a3, i32 %b4)
  ret i1 %calltmp
  ret i32 0
}
